--- a/style.css
+++ b/style.css
@@ -133,3 +133,10 @@ footer {
     bottom: 0;
 
 }
+.main-container {
+    width: 100%;
+    height: 100vh;
+    background-image: url('images/بدون اسم6_20240909011141.png');
+    background-size: cover;
+    background-position: center;
+}
