--- a/style.css
+++ b/style.css
@@ -31,8 +31,21 @@ header {
     display: block;
     width: 30px;
     height: 3px;
-    background-color: #333;
+    background-color: #fff;
     margin: 5px 0;
+    transition: all 0.3s ease;
+}
+
+.menu-toggle.active .bar:nth-child(1) {
+    transform: rotate(45deg) translate(5px, 6px);
+}
+
+.menu-toggle.active .bar:nth-child(2) {
+    opacity: 0;
+}
+
+.menu-toggle.active .bar:nth-child(3) {
+    transform: rotate(-45deg) translate(5px, -6px);
 }
 
 .side-menu {
@@ -75,7 +88,7 @@ footer {
     bottom: 0;
 }
 
-#upload-modal {
+.upload-modal {
     display: none;
     position: fixed;
     z-index: 1000;
@@ -107,4 +120,4 @@ footer {
     color: black;
     text-decoration: none;
     cursor: pointer;
-}
+    }
