--- a/style.css
+++ b/style.css
@@ -121,3 +121,17 @@ footer {
     text-decoration: none;
     cursor: pointer;
     }
+/* زر الرفع */
+#upload-button {
+    margin-top: 10px;
+    padding: 10px 20px;
+    background-color: #4CAF50;
+    color: white;
+    border: none;
+    cursor: pointer;
+    border-radius: 5px;
+}
+
+#upload-button:hover {
+    background-color: #45a049;
+}
